gearset/main/default/objects/AlexCustomObject__c/fields/ADate__c.field-meta.xml
<CustomField>
        <fullName>ADate__c</fullName>
        <label>ADate</label>
        <type>Date</type>
    </CustomField>