gearset/main/default/objects/AlexCustomObject__c/fields/ANumberField__c.field-meta.xml
<CustomField>
        <fullName>ANumberField__c</fullName>
        <label>ANumberField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>