gearset/main/default/objects/AlexCustomObject__c/fields/ATextField__c.field-meta.xml
<CustomField>
        <fullName>ATextField__c</fullName>
        <label>ATextField</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>